General registration report fix and small bugfixes with authentication